# online_cinema_api

./: .env.sample  README.md  alembic.ini  docker-compose-dev.yml  pyproject.toml
commands/: run_migration.sh
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session_postgres.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 663f699fb9f5_created_accounts_tables.py  68f68e442c70_initial.py
src/database/models/: __init__.py  accounts.py  movies.py  order.py  payments.py  shopping_cart.py
src/database/security/: __init__.py
src/database/validators/: __init__.py
src/exceptions/: __init__.py
src/notifications/: __init__.py  emails.py
src/notifications/templates/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
src/routes/: __init__.py  accounts.py  movies.py  orders.py  payments.py  shopping_cart.py
src/schemas/: __init__.py  accounts.py  movies.py  orders.py  shopping_cart.py
src/security/: __init__.py  auth.py  token_manager.py
src/storages/: __init__.py
src/webhooks/: webhooks.py
src/workers/: __init__.py  celery_app.py  tasks.py
