[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "boris-devs",email = "boris.tikhonov.21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "0.115.12"
uvicorn = "0.34.2"
sqlalchemy = "2.0.40"
email-validator = "^2.2.0"
passlib = "^1.7.4"
alembic = "^1.15.2"
pydantic-settings = "^2.9.1"
aiosqlite = "^0.21.0"
