[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "boris-devs",email = "boris.tikhonov.21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "0.115.12"
uvicorn = "0.34.2"
sqlalchemy = "2.0.40"
email-validator = "^2.2.0"
passlib = "^1.7.4"
alembic = "^1.15.2"
pydantic-settings = "^2.9.1"
aiosqlite = "^0.21.0"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
botocore = "^1.35.99"
aioboto3 = "^14.3.0"
